assert-struct/tests/snapshots/enum_struct_patterns__enum_struct_field_mismatch.snap
---
source: assert-struct/tests/enum_struct_patterns.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/enum_struct_patterns_errors/enum_struct_field_mismatch.rs:35:23
   |
35 |                 name: "get_items", // This will fail
   |                       ^^^^^^^^^^^ got "select_users"
